--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <body>
       <header>
          <div class="caja">
-           <h1><img src="../peluqueria/imagenes/logo.png"></h1>
+           <h1><img src="../peluqueria/../barberiaalura/imagenes/logo.png"></h1>
            <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -25,13 +25,13 @@
          </div>
      </header>  
 
-      <img class="banner" src="../peluqueria/banner/banner.jpg">
+      <img class="banner" src="../barberiaalura/banner/banner.jpg">
 
     <main>    
        <section class="principal">
             <h2 class="titulo-principal">Sobre la Barbería Alura</h2>
 
-            <img class="utensilios" src="../peluqueria/imagenes/utensilios[1].jpg" alt="Estos son los utensilios de un barbero">
+            <img class="utensilios" src="../barberiaalura/imagenes/utensilios[1].jpg" alt="Estos son los utensilios de un barbero">
 
             <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
 
@@ -61,7 +61,7 @@
                   <li class="items">Profesionales calificados</li>
                   <li class="items">Puntualidad</li>
                   <li class="items">Limpieza</li>
-               </ul><img src="../peluqueria/banner/diferenciales.jpg" class="imagen-diferenciales">
+               </ul><img src="../barberiaalura/banner/diferenciales.jpg" class="imagen-diferenciales">
            </div>
 
            <div class="video">
@@ -70,7 +70,7 @@
        </section>
     </main>
     <footer>
-       <img src="imagenes/logo-blanco.png">
+       <img src="../barberiaalura/imagenes/logo-blanco.png">
        <p class="copyright">&copy Copyright Barbería Alura - 2020</p>
     </footer>
    </body>
