--- a/productos.html
+++ b/productos.html
@@ -12,7 +12,7 @@
    <body>
        <header>
            <div class="caja">
-             <h1><img src="../peluqueria/imagenes/logo.png"></h1>
+             <h1><img src="../barberiaalura/imagenes/logo.png"></h1>
              <nav>
                   <ul>
                       <li><a href="index.html">Home</a></li>
@@ -28,19 +28,19 @@
            <ul class="productos">
                <li>
                   <h2>Cabello</h2>
-                  <img src="imagenes/cabello.jpg">
+                  <img src="../barberiaalura/imagenes/cabello.jpg">
                   <p class="producto-descripcion">Con tijera o máquina, a gusto del cliente</p>
                   <p class="producto-precio">$ 10.00</p>
                </li>
                <li>
                   <h2>Barba</h2>
-                  <img src="imagenes/barba.jpg">
+                  <img src="../barberiaalura/imagenes/cabello.jpg">
                   <p class="producto-descripcion">Corte y diseño profesional de barba</p>
                   <p class="producto-precio">$ 08.00</p>
                </li>
                <li>
                   <h2>Cabello + Barba</h2>
-                  <img src="imagenes/cabello+barba.jpg">
+                  <img src="../barberiaalura/imagenes/cabello+barba.jpg">
                   <p class="producto-descripcion">Paquete completo de cabello y barba</p>
                   <p class="producto-precio">$ 15.00</p>
                </li>
@@ -48,7 +48,7 @@
        </main>
 
        <footer>
-          <img src="imagenes/logo-blanco.png">
+          <img src="../barberiaalura/imagenes/logo-blanco.png">
           <p class="copyright">&copy Copyright Barbería Alura - 2020</p>
        </footer>
    </body>
